--- a/app/src/main/res/layout/recipe_list_layout.xml
+++ b/app/src/main/res/layout/recipe_list_layout.xml
@@ -4,20 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.seg2105a.esther.cookhelper.RecipeAdapter">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:id="@+id/icon"
         android:minWidth="60dp"
         android:minHeight="60dp"
         android:nestedScrollingEnabled="true"
-        app:srcCompat="@color/colorPrimaryDark" />
+        app:srcCompat="@drawable/default_meal_image" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -27,16 +23,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
+            android:text="Recipe Name"
             android:id="@+id/itemName"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:textSize="24sp"
+            android:textStyle="normal|bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
+            android:text="Category., Type"
             android:id="@+id/itemIngredient"
             android:layout_gravity="center_horizontal" />
 
@@ -47,6 +44,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/configImage"
         android:minHeight="60dp"
-        android:minWidth="30dp"/>
+        android:minWidth="30dp"
+        />
 
 </LinearLayout>
