--- a/app/src/main/res/layout/activity_add_attribute.xml
+++ b/app/src/main/res/layout/activity_add_attribute.xml
@@ -28,4 +28,13 @@
         android:id="@+id/button9"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:backgroundTint="@color/colorPrimary" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_weight="0.64" />
 </LinearLayout>
